# Numen-Sentinel

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  test_bindings.py
cpp/include/: process_info.h  process_manager.h
cpp/src/: bindings.cpp  process_info.cpp  process_manager.cpp
python/: main.py
python/gui/: main_window.py  process_table.py
